--- a/React/Views/Home/Index.cshtml
+++ b/React/Views/Home/Index.cshtml
@@ -9,6 +9,7 @@
     <div id="content"></div>
     <script src="https://fb.me/react-15.0.1.js"></script>
     <script src="https://fb.me/react-dom-15.0.1.js"></script>
+    <script src="@Url.Content("~/Scripts/showdown.min.js")"></script>
     <script src="@Url.Content("~/Scripts/Tutorial.jsx")"></script>
 </body>
 </html>
