--- a/React/Views/Home/Index.cshtml
+++ b/React/Views/Home/Index.cshtml
@@ -4,12 +4,13 @@
 <html>
 <head>
     <title>Hello React</title>
+    @Styles.Render("~/Content/css")
 </head>
 <body>
     <div id="content"></div>
     <script src="https://fb.me/react-15.0.1.js"></script>
     <script src="https://fb.me/react-dom-15.0.1.js"></script>
     <script src="@Url.Content("~/Scripts/showdown.min.js")"></script>
-    <script src="@Url.Content("~/Scripts/Tutorial.jsx")"></script>
+    <script src="@Url.Content("~/Scripts/React/Tutorial.jsx")"></script>
 </body>
 </html>
